--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,27 +76,57 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="生活小提示:" />
+                android:text="天气:"
+                android:textColor="#000000" />
 
             <com.hu.weatherreport.MyListView
-                android:id="@+id/listview_life"
-                android:layout_width="wrap_content"
+                android:id="@+id/listview_weather"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="天气:" />
+                android:layout_marginTop="10dp"
+                android:text="生活小提示:"
+                android:textColor="#000000" />
 
             <com.hu.weatherreport.MyListView
-                android:id="@+id/listview_weather"
-                android:layout_width="wrap_content"
+                android:id="@+id/listview_life"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
 
         </LinearLayout>
 
 
     </ScrollView>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|right"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:gravity="right"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/et_cityname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLength="20"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="深圳" />
+
+        <Button
+            android:id="@+id/btn_reflash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="更新" />
+    </LinearLayout>
 
 
 </FrameLayout>
